# ICE40_Computer

./: .gitignore  Makefile  upload_ryz.sh
bitstream_loader/: CMakeLists.txt
bitstream_loader/src/: .org 0x0000.txt  debug.cpp  debug.h  main.cpp  raccoon.h  rom.h
config/: pinout.pcf
old_stuff/: ROM.vhd  SevenSegment.v
src/: CPU.vhd  CRAM.vhd  Computer.vhd  Debug.vhd  Debugger.vhd  ICE40_CPU.vhd  ICE40_CRAM.vhd  ICE40_Computer.vhd  ICE40_VGA.vhd  ICE40_VRAM.vhd  MemoryMap.vhd  PS2Driver.vhd  RAM.vhd  SevenSegment.vhd  VGA_GEN.vhd  VRAM.vhd
src/ice40_blocks/: bram.v  pll.v  spram.v
